Trying to fix scroll-top visibility in mobile browsers
In Android Chrome, the right-top button to back-to-top isnt visible when there is a horizontal scroll!

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -355,7 +355,9 @@ span + .entry-title {
 }
 .back-to-top { 
 	margin: 0;	 
-	position: fixed;	 
+	position: fixed;
+	-webkit-backface-visibility: hidden; //attempt to fix visibility issue on mobile browser
+	backface-visibility: hidden;
 	top: 10px;
 	right: 10px;
 	z-index: 100;	 
